# synctell

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md
.beads/: interactions.jsonl  issues.jsonl  metadata.json
src/: main.rs  mcp.rs
tests/: mcp_integration.rs
