[package]
name = "synctell"
version = "0.2.0"
edition = "2024"
description = "Instantly create and use FIFO special files for inter-process and AI agent communication"
license = "MIT"
repository = "https://github.com/djha-skin/synctell"
homepage = "https://github.com/djha-skin/synctell"
documentation = "https://github.com/djha-skin/synctell"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
rmcp = { version = "2.2.0", features = ["server", "macros", "schemars", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"

[dev-dependencies]
tempfile = "3.27.0"
